Avoid legend and overlay panel overlap

--- a/www/styles.css
+++ b/www/styles.css
@@ -77,3 +77,9 @@
   padding: 30px;
   height: 100%;
 }
+
+.leaflet-control-layers-list {
+  max-height: 500px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
